--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "dev": "env-cmd nodemon ./src/app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
