--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "env-cmd": "^10.1.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.2.1"
   }
 }
